--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "python.pythonPath": "C:\\ProgramData\\Miniconda3\\python.exe"
+    "python.pythonPath": "C:\\ProgramData\\Miniconda3\\python.exe",
+    "prettier.printWidth": 400,
+    "prettier.tabWidth": 4,
+    "editor.formatOnSave": true
 }
